[gd_scene load_steps=6 format=3 uid="uid://cc80kys2ggc2w"]

[ext_resource type="StyleBox" uid="uid://c27aqt620w33a" path="res://Assets/Visual/Placeholder/box.tres" id="1_00uxq"]
[ext_resource type="Script" uid="uid://cuallaoqhb7i6" path="res://Source/Unit/Unit.gd" id="2_byrkg"]
[ext_resource type="PackedScene" uid="uid://ba8l4kymsrm36" path="res://Source/Unit/2D Face Display.tscn" id="3_pqxwy"]
[ext_resource type="PackedScene" uid="uid://bvryp6yf6hghl" path="res://Source/Unit/DieDisplay.tscn" id="4_py7ew"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tirjg"]
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" node_paths=PackedStringArray("face_display", "die_display")]
offset_right = 361.0
offset_bottom = 393.0
script = ExtResource("2_byrkg")
face_display = NodePath("PanelContainer2/Face")
die_display = NodePath("PanelContainer")

[node name="PanelContainer2" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/panel = ExtResource("1_00uxq")

[node name="Face" parent="PanelContainer2" instance=ExtResource("3_pqxwy")]
visible = false

[node name="Net" type="Node2D" parent="PanelContainer2"]
texture_filter = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NameLine" type="Label" parent="PanelContainer2/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
text = "NAME"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer2/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="FaceSlot" type="PanelContainer" parent="PanelContainer2/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_tirjg")

[node name="ColorRect" type="ColorRect" parent="PanelContainer2/VBoxContainer2/FaceSlot"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
color = Color(0.26293245, 0.26293245, 0.26293245, 1)

[node name="HpBar" type="ProgressBar" parent="PanelContainer2/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
mouse_filter = 1
value = 18.17

[node name="Token Container" type="HBoxContainer" parent="PanelContainer2/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 3

[node name="PanelContainer" parent="." instance=ExtResource("4_py7ew")]
layout_mode = 2

[connection signal="gui_input" from="PanelContainer2" to="PanelContainer2" method="_on_gui_input"]
[connection signal="mouse_entered" from="PanelContainer2" to="PanelContainer2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer2" to="PanelContainer2" method="_on_mouse_exited"]
